--- a/index.html
+++ b/index.html
@@ -4,6 +4,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TechZone - Tu Zona de Tecnología</title>
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./images/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./images/favicon-16x16.png"
+    />
+
+    <link rel="icon" type="image/x-icon" href="./images/favicon.ico" />
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -12,9 +31,9 @@
       rel="stylesheet"
     />
     <link
-  rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-/>
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
   </head>
   <body>
     <header>
@@ -50,7 +69,17 @@
     <main>
       <div class="container">
         <section class="banner-section">
-       <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?auto=format&fit=crop&w=1200&h=300&q=80" alt="Banner TechZone - Tecnología Moderna"/>
+          <div class="banner">
+            <img
+              src="https://images.unsplash.com/photo-1629429408209-1f912961dbd8?auto=format&fit=crop&w=1200&h=300&q=80"
+              alt="Banner TechZone"
+            />
+            <div class="banner-content">
+              <h2>Gaming a Otro Nivel</h2>
+              <p>Equípate con lo mejor</p>
+            </div>
+          </div>
+        </section>
 
         <section class="products">
           <h2>Productos Destacados</h2>
@@ -205,7 +234,7 @@
           </div>
         </div>
         <div class="footer-bottom">
-          <p>&copy; 2023 TechZone</p>
+          <p>&copy; 2023 TechZone. Todos los derechos reservados</p>
         </div>
       </div>
     </footer>
